# jupyterlab-chameleon

./: .eslintrc.js  .gitignore  .prettierignore  Dockerfile  MANIFEST.in  Makefile  README.md  install.json  package.json  pyproject.toml  setup.py  test-requirements.txt  tox.ini  tsconfig.json
.github/workflows/: build.yml  ci.yml
ansible/: kernel_action.yml
ansible/files/: detect-paths.sh  hydra_agent.py
hydra_kernel/: __init__.py  __main__.py  binding.py  exception.py  install.py  kernel.py  kernelprovisioner.py  kernelspec.py  magics.py  manager.py  traitlets.py  utils.py
hydra_kernel/manager/: __init__.py  base.py  local.py  ssh.py  zmq.py  zun.py
hydra_kernel/provisioning/: base.py  local.py  ssh.py  zun.py
jupyter-config/: jupyterlab-chameleon.json
jupyter-config/jupyter_notebook_config.d/: jupyterlab_chameleon.json
jupyterlab_chameleon/: __init__.py  _version.py  artifact.py  db.py  db_schema.sql  exception.py  heartbeat.py  package_artifact.py  test_db.py  trovi.py  util.py
jupyterlab_chameleon/extensions/: bash_kernel.py
schema/: artifact-sharing.json  cell-binding.json  plugin.json
scripts/: chi-requirements.txt  requirements.txt  start-notebook-dev.sh
scripts/bashrc.d/: auth.sh  chameleon_functions.sh  ssh_agent.sh
scripts/before-notebook.d/: 10_workdir.sh  11_update_artifacts_schema.py  20_jupyterlab-settings.sh
scripts/serverroot/: Welcome.ipynb
src/: actions.ts  handler.ts  index.ts  toolbar-extension.tsx
src/artifact-sharing/: index.ts  (+6 more)
style/: artifact-sharing.css  cell-binding.css  hydra-kernel.css  index.css  index.js
(+34 files in other folders)
